Fix table overflow on sm display

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,12 +168,6 @@ footer {
     background-color: #ce422b;
 }
 
-.remove-button {
-    position: absolute;
-    top: 33%;
-    right: 3%;
-}
-
 .remove-button .fa-circle {
     color: #ce422b;
 }
@@ -182,6 +176,12 @@ footer {
 
 .asteriskField {
     display: none;
+}
+
+/* Table Styles */
+
+.table th, .table td {
+    padding: 12px 5px;
 }
 
 /* Media Queries */
